syntax = "proto3";

package ninja;

service NinjaService {
  rpc FindOne (NinjaById) returns (Ninja) {}
  rpc FindAll (Empty) returns (ListNinjas) {}
  rpc Add (Ninja) returns (Ninja) {}
}

message NinjaById {
  int32 id = 1;
}

message Ninja {
  int32 id = 1;
  string name = 2;
}

message ListNinjas {
  repeated Ninja ninjas = 1;
}

message Empty {}
